--- a/styles/components/sidebar.sass
+++ b/styles/components/sidebar.sass
@@ -63,7 +63,6 @@ $cellPadding: 16px
   position: relative
   max-height: $cellHeight
   display: flex
-  overflow-y: hidden
 
   input
     border: none
